--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref
 certifi
 crispy-bootstrap5
 distlib
+dj-database-url
 Django
 django-crispy-forms
 django-environ
@@ -16,6 +17,7 @@ Pillow
 pipenv
 platformdirs
 psycopg2
+psycopg2-binary
 PyAutoGUI
 PyGetWindow
 PyMsgBox
@@ -25,5 +27,6 @@ pyscreenshot
 PyScreeze
 pytweening
 sqlparse
+typing_extensions
 tzdata
 virtualenv
